# paraterbi

./: CMakeLists.txt  README.md
data/: sents
script/: run.sh  sum.py
script/filter/: gcc_filter.sh  gcc_filter.sh.in  myfilter.sh
src/: CMakeLists.txt  HMM.hpp  Matrix.hpp  MatrixV.hpp  main.cpp  utility.hpp  viterbi.hpp  viterbi_baseline.hpp  viterbi_improved.hpp  viterbi_simd.hpp
